[build-system]
#requires = ["build_idl@../build-idl", "install_idl@../build-idl", "wheel", "setuptools"]
#requires = ["custom-build@git+https://github.com/n-kawauchi/custom-build", "wheel", "setuptools>=42", "setuptools_scm[toml]>=3.4.1"]
requires = ["custom-build@git+https://github.com/n-kawauchi/custom-build", "wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
