[metadata]
name = rtctree-aist
version = 4.2.4
author = Geoffrey Biggs, Noriaki Ando
author_email = n-ando@aist.go.jp
license = LGPL3
description = API for interacting with running RT Components and managing RTM-based systems.
url = https://github.com/OpenRTM/rtctree
long_description = API for interacting with running RT Components and managing RTM-based systems.
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development

[options]
packages = find:
zip_safe = True
include_package_data = True

    
